deploys/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wasm-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /p
        pathType: Prefix
        backend:
          service:
            name: product-app
            port:
              number: 80
      # - path: /c
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: counter-api
      #       port:
      #         number: 80
